Remove Ollama, restore OpenAI embeddings, integrate AI synthesis into semantic search UI, 633 tests
- Remove spring-ai-starter-model-ollama dependency and all Ollama config
  (application.yml, test application.yml, application-h2.yml)
- Restore OpenAI as embedding provider (1536 dimensions)
- SemanticSearchController now uses ConductAiSearchUseCase for AI-enhanced
  search with graceful fallback to vector-only on failure
- semantic-search.html adds AI synthesis cards (model label, summary,
  key findings) replacing old snippet display
- SemanticSearchControllerTest expanded to 9 tests covering AI synthesis,
  fallback, tier gating, usage tracking

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>